--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "BASE_URL": "https://paste.arh.my.id/",
+  "BASE_URL": "https://paste.arh.my.id",
   "REPO": "https://github.com/arh-space/pastebin",
   "FAVICON": "https://cdn.arh.my.id/cdn/img/ARHLogo.png"
 }
